# Multi-agent-orchestrator

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/repo_surgeon/: __init__.py  cli.py  config.py  graph.py  home.py  models.py  registry.py  routing.py  runner.py  state.py
src/repo_surgeon/agents/: __init__.py  context.py  localizer.py  nodes.py  planner.py  prompts.py  writer.py
src/repo_surgeon/editing/: __init__.py  search_replace.py
src/repo_surgeon/evaluation/: __init__.py  harness.py
src/repo_surgeon/evaluation/cases/operator_bug/: meta.json  test_calc.py
src/repo_surgeon/evaluation/cases/pagination/: meta.json  pager.py  test_pager.py
src/repo_surgeon/evaluation/cases/safe_get/: meta.json  store.py  test_store.py
src/repo_surgeon/issues/: __init__.py  base.py  factory.py  github.py  local.py
src/repo_surgeon/llm/: embeddings.py  factory.py  response.py
src/repo_surgeon/retrieval/: __init__.py  chunking.py  grep.py  knowledge_base.py  reader.py  semantic.py  vector_index.py
src/repo_surgeon/sandbox/: __init__.py  docker_runner.py  report.py
src/repo_surgeon/ui/: __init__.py  app.py
src/repo_surgeon/workspace/: __init__.py  base.py  factory.py  github.py  ignore.py  local.py  resolver.py  shadow.py  staging.py
tests/: conftest.py  test_agents.py  test_config.py  test_doc_tasks.py  test_eval.py  test_github.py  test_graph.py  test_issues.py  test_plain_folders.py  test_registry.py  test_report.py  test_resolver.py  test_retrieval.py  test_routing.py  test_runner_safety.py  test_sandbox_docker.py  test_search_replace.py  test_semantic.py  test_workspace.py
